--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.3"
 wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
+serde = "1.0.215"
+serde_json = "1.0.133"
+messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git", branch = "dev" }
