--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
 serde = "1.0.215"
 serde_json = "1.0.133"
-messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git", branch = "dev" }
+messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git"}
